fix ul left alignment

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -24,6 +24,7 @@ a:hover {
 
 ul {
   list-style-type: circle;
+  -webkit-padding-start: 20px;
 }
 
 /* === NAVIGATION BAR === */
